Super important commit

--- a/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
+++ b/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T23:47:44.166324Z",
-     "start_time": "2019-04-10T23:47:44.081978Z"
+     "end_time": "2019-04-10T23:49:37.954507Z",
+     "start_time": "2019-04-10T23:49:37.843922Z"
     }
    },
    "outputs": [
@@ -74,7 +74,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1797, 64) 16.0 0.0\n"
+      "(1797, 64) 2.4424196817327575 -1.019574787389169\n",
+      "(1797,) 9 0\n"
      ]
     }
    ],
@@ -82,35 +83,36 @@
     "# get the data \n",
     "digits = datasets.load_digits()\n",
     "X = digits.images.reshape((digits.images.shape[0],-1))\n",
+    "X = (X-X.mean(1)[:,None])/(X.std(1)[:,None])\n",
     "Y = digits.target\n",
     "\n",
-    "print(X.shape,X.max(),X.min())\n"
+    "print(X.shape,X.max(),X.min())\n",
+    "print(Y.shape,Y.max(),Y.min())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T23:43:52.913529Z",
-     "start_time": "2019-04-10T23:43:52.908569Z"
+     "end_time": "2019-04-10T23:49:47.732747Z",
+     "start_time": "2019-04-10T23:49:47.703454Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1797, 8, 8)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1797, 2)\n"
+     ]
     }
    ],
    "source": [
     "# traditional pca \n",
-    "pca_data = PCA(2).fit_transform()"
+    "pca_data = PCA(2).fit_transform(X)\n",
+    "plt.scatter(pca_data[:,0],pca_data[:,1],c=Y,cmap='')\n",
+    "print(pca_data.shape)"
    ]
   },
   {
