Super important commit

--- a/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
+++ b/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
@@ -63,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T23:53:35.041678Z",
-     "start_time": "2019-04-10T23:53:34.952408Z"
+     "end_time": "2019-04-10T23:58:23.282494Z",
+     "start_time": "2019-04-10T23:58:23.196172Z"
     }
    },
    "outputs": [
@@ -89,7 +89,9 @@
     "\n",
     "print(X.shape,X.max(),X.min())\n",
     "print(Y.shape,Y.max(),Y.min())\n",
-    "colors = ['red','green','blue','purple','white','yellow','black','lightblue','pink']"
+    "colors = ['red','green','blue','purple','white','yellow','black','lightblue','pink']\n",
+    "cdict  = {0: 'red', 1: 'blue', 2: 'green',3: 'green',4: 'green',\n",
+    "         5: 'green',6: 'green',7: 'green',8: 'green',9: 'green'}"
    ]
   },
   {
@@ -124,18 +126,15 @@
     "# traditional pca \n",
     "pca_data = PCA(2).fit_transform(X)\n",
     "\n",
-    "\n",
+    "plt.figure(figsize=(10,10))\n",
     "fig, ax = plt.subplots()\n",
-    "for g in np.unique(group):\n",
-    "    ix = np.where(group == g)\n",
-    "    ax.scatter(scatter_x[ix], scatter_y[ix], c = cdict[g], label = g, s = 100)\n",
+    "for class_label in Y:\n",
+    "    ix = np.where(Y == class_label)\n",
+    "    ax.scatter(pca_data[ix], pca_data[ix], c = cdict[g], label = Y, s = 100)\n",
     "ax.legend()\n",
     "plt.show()\n",
     "\n",
-    "plt.figure(figsize=(10,10))\n",
-    "plt.scatter(pca_data[:,0],pca_data[:,1],c=Y, cmap=matplotlib.colors.ListedColormap(colors),label=str(colors))\n",
-    "plt.legend()\n",
-    "plt.show()\n",
+    "\n",
     "\n",
     "print(pca_data.shape)"
    ]
