Super important commit

--- a/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
+++ b/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
@@ -89,8 +89,7 @@
     "\n",
     "print(X.shape,X.max(),X.min())\n",
     "print(Y.shape,Y.max(),Y.min())\n",
-    "cdict  = {0: 'red', 1: 'blue', 2: 'blue',3: 'purple',4: 'white',\n",
-    "         5: 'yellow',6: 'black',7: 'lightblue',8: 'pink',9: 'gold'}"
+    "cdict  = {0: 'red', 1: 'blue', 2: 'green',3: 'purple',4: 'white',5: 'yellow',6: 'black',7: 'lightblue',8: 'pink',9: 'gold'}"
    ]
   },
   {
@@ -181,54 +180,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:00:16.894432Z",
-     "start_time": "2019-04-11T00:00:16.867612Z"
+     "end_time": "2019-04-11T00:00:56.330666Z",
+     "start_time": "2019-04-11T00:00:54.537103Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'RandomizedPCA'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-56-ae29888ad0a8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mitertools\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mproduct\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecomposition\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mRandomizedPCA\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatasets\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mfetch_mldata\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'RandomizedPCA'"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from itertools import product\n",
-    "from sklearn.decomposition import RandomizedPCA\n",
-    "from sklearn.datasets import fetch_mldata\n",
-    "from sklearn.utils import shuffle\n",
-    "\n",
-    "#use all digits\n",
-    "mnist = fetch_mldata(\"MNIST original\")\n",
-    "X_train, y_train = mnist.data[:70000] / 255., mnist.target[:70000]\n",
-    "\n",
-    "#X_train, y_train = shuffle(X_train, y_train)\n",
-    "#X_train, y_train = X_train[:1000], y_train[:1000]  # lets subsample a bit for a first impression\n",
-    "\n",
-    "pca = RandomizedPCA(n_components=2)\n",
-    "fig, plot = plt.subplots()\n",
-    "fig.set_size_inches(50, 50)\n",
-    "plt.prism()\n",
-    "\n",
-    "X_transformed = pca.fit_transform(X_train)\n",
-    "plot.scatter(X_transformed[:, 0], X_transformed[:, 1], c=y_train)\n",
-    "plot.set_xticks(())\n",
-    "plot.set_yticks(())\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.savefig(\"mnist_pca.png\")"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
