Super important commit

--- a/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
+++ b/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
@@ -217,7 +217,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class PCA_Layer():\n",
+    "    \n",
+    "    def __init__(self,inc,outc):\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
