Super important commit

--- a/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
+++ b/sandbox full of trash/PCA via gradient 2/7 smaller pca .ipynb
@@ -218,10 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PCA_Layer():\n",
-    "    \n",
-    "    def __init__(self,inc,outc):\n",
-    "        "
+    "w1 = np.random."
    ]
   },
   {
