--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -278,6 +278,7 @@
     "\n",
     "    def __init__(self,inc,outc):\n",
     "        self.w =self._sym_decorrelation(np.random.randn(inc,outc))\n",
+    "        self.a =np.one\n",
     "        \n",
     "        \n",
     "    def _sym_decorrelation(self,W):\n",
