Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -265,11 +265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:15:30.386448Z",
-     "start_time": "2019-04-11T00:15:30.380024Z"
+     "end_time": "2019-04-11T00:19:45.604308Z",
+     "start_time": "2019-04-11T00:19:45.595862Z"
     }
    },
    "outputs": [],
@@ -278,7 +278,10 @@
     "\n",
     "    def __init__(self,inc,outc):\n",
     "        self.w =self._sym_decorrelation(np.random.randn(inc,outc))\n",
-    "        self.a =np.one\n",
+    "        self.a =np.ones(outc)\n",
+    "        self.b =np.ones(outc)\n",
+    "        self.c =np.zeros(outc)\n",
+    "\n",
     "        \n",
     "        \n",
     "    def _sym_decorrelation(self,W):\n",
