Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -265,25 +265,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:19:45.604308Z",
-     "start_time": "2019-04-11T00:19:45.595862Z"
-    }
+     "end_time": "2019-04-11T00:20:35.480751Z",
+     "start_time": "2019-04-11T00:20:35.472816Z"
+    },
+    "code_folding": [
+     11
+    ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-23-c83322a2cc85>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-23-c83322a2cc85>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    def __init__(self,inc,outc,act=g,d-act=g_grad):\u001b[0m\n\u001b[1;37m                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "class PCA_layer():\n",
     "\n",
-    "    def __init__(self,inc,outc):\n",
+    "    def __init__(self,inc,outc,act=g,d-act=g_grad):\n",
     "        self.w =self._sym_decorrelation(np.random.randn(inc,outc))\n",
     "        self.a =np.ones(outc)\n",
     "        self.b =np.ones(outc)\n",
     "        self.c =np.zeros(outc)\n",
     "\n",
+    "        self.act = act; self.d_act = d_act\n",
     "        \n",
-    "        \n",
+    "    def norm(self,w):\n",
+    "        return w2/(np.sqrt(np.sum(w2**2)))\n",
     "    def _sym_decorrelation(self,W):\n",
     "        \"\"\" Symmetric decorrelation\n",
     "        i.e. W <- (W * W.T) ^{-1/2} * W\n",
@@ -296,11 +310,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:15:44.568528Z",
-     "start_time": "2019-04-11T00:15:44.467343Z"
+     "end_time": "2019-04-11T00:20:03.187962Z",
+     "start_time": "2019-04-11T00:20:03.181515Z"
     }
    },
    "outputs": [
@@ -308,19 +322,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.  0. -0. ...  0.  0.  0.]\n",
-      " [ 0.  1.  0. ...  0.  0. -0.]\n",
-      " [-0.  0.  1. ...  0. -0.  0.]\n",
-      " ...\n",
-      " [ 0.  0.  0. ...  1.  0.  0.]\n",
-      " [ 0.  0. -0. ...  0.  1.  0.]\n",
-      " [ 0. -0.  0. ...  0.  0.  1.]]\n"
+      "[[ 1.  0.  0.  0.  0.  0.  0. -0.]\n",
+      " [ 0.  1. -0. -0.  0. -0. -0.  0.]\n",
+      " [ 0. -0.  1.  0.  0.  0. -0.  0.]\n",
+      " [ 0. -0.  0.  1. -0. -0.  0. -0.]\n",
+      " [ 0.  0.  0. -0.  1. -0. -0.  0.]\n",
+      " [ 0. -0.  0. -0. -0.  1.  0. -0.]\n",
+      " [ 0. -0. -0.  0. -0.  0.  1. -0.]\n",
+      " [-0.  0.  0. -0.  0. -0. -0.  1.]]\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0.]\n"
      ]
     }
    ],
    "source": [
-    "l1 = PCA_layer(784,256)\n",
-    "print(l1.w.T@l1.w)"
+    "l1 = PCA_layer(64,8)\n",
+    "print(l1.w.T@l1.w)\n",
+    "print(l1.c)"
    ]
   },
   {
