Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -265,23 +265,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:20:35.480751Z",
-     "start_time": "2019-04-11T00:20:35.472816Z"
+     "end_time": "2019-04-11T00:21:51.303740Z",
+     "start_time": "2019-04-11T00:21:51.296300Z"
     },
     "code_folding": [
-     11
+     13
     ]
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-23-c83322a2cc85>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-24-cbe4f580a7b4>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-23-c83322a2cc85>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    def __init__(self,inc,outc,act=g,d-act=g_grad):\u001b[0m\n\u001b[1;37m                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-24-cbe4f580a7b4>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    def __init__(self,inc,outc,act=g,d-act=g_grad):\u001b[0m\n\u001b[1;37m                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -296,8 +296,8 @@
     "\n",
     "        self.act = act; self.d_act = d_act\n",
     "        \n",
-    "    def norm(self,w):\n",
-    "        return w2/(np.sqrt(np.sum(w2**2)))\n",
+    "    def stand(self,a): return (a-a.mean())/a.std()\n",
+    "    def norm(self,w):  return w/(np.sqrt(np.sum(w**2)))\n",
     "    def _sym_decorrelation(self,W):\n",
     "        \"\"\" Symmetric decorrelation\n",
     "        i.e. W <- (W * W.T) ^{-1/2} * W\n",
