Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -265,30 +265,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:21:51.303740Z",
-     "start_time": "2019-04-11T00:21:51.296300Z"
+     "end_time": "2019-04-11T00:21:54.784873Z",
+     "start_time": "2019-04-11T00:21:54.777925Z"
     },
     "code_folding": [
      13
     ]
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-24-cbe4f580a7b4>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-24-cbe4f580a7b4>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    def __init__(self,inc,outc,act=g,d-act=g_grad):\u001b[0m\n\u001b[1;37m                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class PCA_layer():\n",
     "\n",
-    "    def __init__(self,inc,outc,act=g,d-act=g_grad):\n",
+    "    def __init__(self,inc,outc,act=g,d_act=g_grad):\n",
     "        self.w =self._sym_decorrelation(np.random.randn(inc,outc))\n",
     "        self.a =np.ones(outc)\n",
     "        self.b =np.ones(outc)\n",
@@ -296,6 +287,11 @@
     "\n",
     "        self.act = act; self.d_act = d_act\n",
     "        \n",
+    "        self.mw,self.vw = tf.zeros_like(self.w),np.zeros_like(self.w)\n",
+    "        self.ma,self.va = tf.zeros_like(self.a),np.zeros_like(self.a)\n",
+    "        self.mb,self.vb = tf.zeros_like(self.b),np.zeros_like(self.b)\n",
+    "        self.mc,self.vc = tf.zeros_like(self.c),np.zeros_like(self.c) \n",
+    "    \n",
     "    def stand(self,a): return (a-a.mean())/a.std()\n",
     "    def norm(self,w):  return w/(np.sqrt(np.sum(w**2)))\n",
     "    def _sym_decorrelation(self,W):\n",
@@ -310,11 +306,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:20:03.187962Z",
-     "start_time": "2019-04-11T00:20:03.181515Z"
+     "end_time": "2019-04-11T00:21:56.233726Z",
+     "start_time": "2019-04-11T00:21:56.227277Z"
     }
    },
    "outputs": [
@@ -322,14 +318,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.  0.  0.  0.  0.  0.  0. -0.]\n",
-      " [ 0.  1. -0. -0.  0. -0. -0.  0.]\n",
-      " [ 0. -0.  1.  0.  0.  0. -0.  0.]\n",
-      " [ 0. -0.  0.  1. -0. -0.  0. -0.]\n",
-      " [ 0.  0.  0. -0.  1. -0. -0.  0.]\n",
-      " [ 0. -0.  0. -0. -0.  1.  0. -0.]\n",
-      " [ 0. -0. -0.  0. -0.  0.  1. -0.]\n",
-      " [-0.  0.  0. -0.  0. -0. -0.  1.]]\n",
+      "[[ 1. -0.  0. -0. -0. -0. -0. -0.]\n",
+      " [-0.  1.  0.  0.  0. -0. -0.  0.]\n",
+      " [ 0.  0.  1. -0. -0. -0. -0. -0.]\n",
+      " [-0.  0. -0.  1. -0. -0. -0. -0.]\n",
+      " [-0.  0. -0. -0.  1.  0. -0.  0.]\n",
+      " [-0. -0. -0. -0.  0.  1.  0.  0.]\n",
+      " [-0. -0. -0. -0. -0.  0.  1. -0.]\n",
+      " [-0.  0. -0. -0.  0.  0. -0.  1.]]\n",
       "[0. 0. 0. 0. 0. 0. 0. 0.]\n"
      ]
     }
