Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -265,14 +265,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:21:54.784873Z",
-     "start_time": "2019-04-11T00:21:54.777925Z"
+     "end_time": "2019-04-11T00:23:32.934349Z",
+     "start_time": "2019-04-11T00:23:32.924939Z"
     },
     "code_folding": [
-     13
+     2,
+     17
     ]
    },
    "outputs": [],
@@ -287,10 +288,10 @@
     "\n",
     "        self.act = act; self.d_act = d_act\n",
     "        \n",
-    "        self.mw,self.vw = tf.zeros_like(self.w),np.zeros_like(self.w)\n",
-    "        self.ma,self.va = tf.zeros_like(self.a),np.zeros_like(self.a)\n",
-    "        self.mb,self.vb = tf.zeros_like(self.b),np.zeros_like(self.b)\n",
-    "        self.mc,self.vc = tf.zeros_like(self.c),np.zeros_like(self.c) \n",
+    "        self.mw,self.vw = np.zeros_like(self.w),np.zeros_like(self.w)\n",
+    "        self.ma,self.va = np.zeros_like(self.a),np.zeros_like(self.a)\n",
+    "        self.mb,self.vb = np.zeros_like(self.b),np.zeros_like(self.b)\n",
+    "        self.mc,self.vc = np.zeros_like(self.c),np.zeros_like(self.c) \n",
     "    \n",
     "    def stand(self,a): return (a-a.mean())/a.std()\n",
     "    def norm(self,w):  return w/(np.sqrt(np.sum(w**2)))\n",
@@ -306,11 +307,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:21:56.233726Z",
-     "start_time": "2019-04-11T00:21:56.227277Z"
+     "end_time": "2019-04-11T00:23:39.599980Z",
+     "start_time": "2019-04-11T00:23:39.594053Z"
     }
    },
    "outputs": [
@@ -318,14 +319,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1. -0.  0. -0. -0. -0. -0. -0.]\n",
-      " [-0.  1.  0.  0.  0. -0. -0.  0.]\n",
-      " [ 0.  0.  1. -0. -0. -0. -0. -0.]\n",
-      " [-0.  0. -0.  1. -0. -0. -0. -0.]\n",
-      " [-0.  0. -0. -0.  1.  0. -0.  0.]\n",
-      " [-0. -0. -0. -0.  0.  1.  0.  0.]\n",
-      " [-0. -0. -0. -0. -0.  0.  1. -0.]\n",
-      " [-0.  0. -0. -0.  0.  0. -0.  1.]]\n",
+      "[[ 1.  0.  0. -0.  0. -0.  0. -0.]\n",
+      " [ 0.  1. -0. -0.  0.  0.  0.  0.]\n",
+      " [ 0. -0.  1. -0.  0. -0. -0. -0.]\n",
+      " [-0. -0. -0.  1. -0.  0.  0.  0.]\n",
+      " [ 0.  0.  0. -0.  1. -0.  0. -0.]\n",
+      " [-0.  0. -0.  0. -0.  1.  0.  0.]\n",
+      " [ 0.  0. -0.  0.  0.  0.  1. -0.]\n",
+      " [-0.  0. -0.  0. -0.  0. -0.  1.]]\n",
       "[0. 0. 0. 0. 0. 0. 0. 0.]\n"
      ]
     }
@@ -333,7 +334,7 @@
    "source": [
     "l1 = PCA_layer(64,8)\n",
     "print(l1.w.T@l1.w)\n",
-    "print(l1.c)"
+    "print(l1.vc)"
    ]
   },
   {
