--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -265,11 +265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:33:09.706291Z",
-     "start_time": "2019-04-11T00:33:09.695349Z"
+     "end_time": "2019-04-11T00:35:01.619223Z",
+     "start_time": "2019-04-11T00:35:01.603796Z"
     },
     "code_folding": [
      23
@@ -301,6 +301,10 @@
     "    def back_linear(self):\n",
     "        gradw     = -2*self.input.T @ self.input @ self.w \n",
     "        grad_pass = -2*self.input   @ self.w     @ self.w.T\n",
+    "        \n",
+    "        self.mw   = beta1 * self.mw + (1-beta1) * gradw\n",
+    "        self.vw   = beta2 * self.vw + (1-beta2) * gradw ** 2\n",
+    "\n",
     "        return grad_pass\n",
     "        \n",
     "        \n",
@@ -319,28 +323,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:33:27.487549Z",
-     "start_time": "2019-04-11T00:33:27.449853Z"
+     "end_time": "2019-04-11T00:34:33.082026Z",
+     "start_time": "2019-04-11T00:34:33.074095Z"
     }
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'PCA_layer' object has no attribute 'input'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-46-8d3e19d11c38>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ml1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPCA_layer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mback_linear\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mlayer1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlayer1_var\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ml1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeed_linear\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-43-d409de2db7ea>\u001b[0m in \u001b[0;36mback_linear\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mback_linear\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m         \u001b[0mgradw\u001b[0m     \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minput\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m         \u001b[0mgrad_pass\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minput\u001b[0m   \u001b[1;33m@\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mw\u001b[0m     \u001b[1;33m@\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mgrad_pass\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'PCA_layer' object has no attribute 'input'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4500, 2)\n",
+      "[[  773.988 -1318.957   686.958]\n",
+      " [-1318.957  2255.623  -963.815]\n",
+      " [  686.958  -963.815  5970.39 ]]\n",
+      "[[ 0.249 -0.432  0.017]\n",
+      " [-0.432  0.751  0.01 ]\n",
+      " [ 0.017  0.01   1.   ]]\n",
+      "[0. 0. 0.]\n",
+      "(4500, 2)\n"
      ]
     }
    ],
    "source": [
+    "learning_rate = 0.000008; beta1=0.9; beta2=0.999; adam_e = 1e-8 \n",
+    "\n",
     "l1 = PCA_layer(2,3)\n",
     "\n",
     "layer1,layer1_var = l1.feed_linear(X)\n",
