Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -265,11 +265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:35:01.619223Z",
-     "start_time": "2019-04-11T00:35:01.603796Z"
+     "end_time": "2019-04-11T00:35:04.496627Z",
+     "start_time": "2019-04-11T00:35:04.482768Z"
     },
     "code_folding": [
      23
@@ -304,6 +304,9 @@
     "        \n",
     "        self.mw   = beta1 * self.mw + (1-beta1) * gradw\n",
     "        self.vw   = beta2 * self.vw + (1-beta2) * gradw ** 2\n",
+    "        m_hatw = self.mw / (1-beta1)\n",
+    "        v_hatw = self.vw / (1-beta2)\n",
+    "        adam_midw = self.mw / (1-beta1) *  learning_rate/(tf.sqrt(v_hatw) + adam_e)\n",
     "\n",
     "        return grad_pass\n",
     "        \n",
@@ -323,11 +326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:34:33.082026Z",
-     "start_time": "2019-04-11T00:34:33.074095Z"
+     "end_time": "2019-04-11T00:35:04.683123Z",
+     "start_time": "2019-04-11T00:35:04.674194Z"
     }
    },
    "outputs": [
@@ -336,12 +339,12 @@
      "output_type": "stream",
      "text": [
       "(4500, 2)\n",
-      "[[  773.988 -1318.957   686.958]\n",
-      " [-1318.957  2255.623  -963.815]\n",
-      " [  686.958  -963.815  5970.39 ]]\n",
-      "[[ 0.249 -0.432  0.017]\n",
-      " [-0.432  0.751  0.01 ]\n",
-      " [ 0.017  0.01   1.   ]]\n",
+      "[[ 1873.635 -2440.187  -598.683]\n",
+      " [-2440.187  3442.05   1739.997]\n",
+      " [ -598.683  1739.997  3684.315]]\n",
+      "[[ 0.422 -0.476  0.131]\n",
+      " [-0.476  0.608  0.108]\n",
+      " [ 0.131  0.108  0.97 ]]\n",
       "[0. 0. 0.]\n",
       "(4500, 2)\n"
      ]
