--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -265,14 +265,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 58,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:35:04.496627Z",
-     "start_time": "2019-04-11T00:35:04.482768Z"
+     "end_time": "2019-04-11T00:36:38.106285Z",
+     "start_time": "2019-04-11T00:36:38.092918Z"
     },
     "code_folding": [
-     23
+     15,
+     20,
+     33
     ]
    },
    "outputs": [],
@@ -280,7 +282,7 @@
     "class PCA_layer():\n",
     "\n",
     "    def __init__(self,inc,outc,act=g,d_act=g_grad):\n",
-    "        self.w =self._sym_decorrelation(np.random.randn(inc,outc))\n",
+    "        self.w =self.sym_decorrelation(np.random.randn(inc,outc))\n",
     "        self.a =np.ones(outc)\n",
     "        self.b =np.ones(outc)\n",
     "        self.c =np.zeros(outc)\n",
@@ -297,24 +299,21 @@
     "        self.layer = self.input @ self.w\n",
     "        var = self.w.T @ self.input.T @ self.input @ self.w\n",
     "        return self.layer,var\n",
-    "    \n",
     "    def back_linear(self):\n",
     "        gradw     = -2*self.input.T @ self.input @ self.w \n",
     "        grad_pass = -2*self.input   @ self.w     @ self.w.T\n",
     "        \n",
     "        self.mw   = beta1 * self.mw + (1-beta1) * gradw\n",
     "        self.vw   = beta2 * self.vw + (1-beta2) * gradw ** 2\n",
-    "        m_hatw = self.mw / (1-beta1)\n",
-    "        v_hatw = self.vw / (1-beta2)\n",
-    "        adam_midw = self.mw / (1-beta1) *  learning_rate/(tf.sqrt(v_hatw) + adam_e)\n",
-    "\n",
+    "        adam_midw = (self.mw / (1-beta1)) * learning_rate/(np.sqrt(self.vw/(1-beta2)) + adam_e)\n",
+    "        self.w    = self.sym_decorrelation(self.w - adam_midw)\n",
     "        return grad_pass\n",
     "        \n",
-    "        \n",
+    "    def feed_non(self,input)\n",
     "    \n",
     "    def stand(self,a): return (a-a.mean())/a.std()\n",
     "    def norm(self,w):  return w/(np.sqrt(np.sum(w**2)))\n",
-    "    def _sym_decorrelation(self,W):\n",
+    "    def sym_decorrelation(self,W):\n",
     "        \"\"\" Symmetric decorrelation\n",
     "        i.e. W <- (W * W.T) ^{-1/2} * W\n",
     "        \"\"\"\n",
@@ -326,11 +325,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:35:04.683123Z",
-     "start_time": "2019-04-11T00:35:04.674194Z"
+     "end_time": "2019-04-11T00:37:14.658711Z",
+     "start_time": "2019-04-11T00:37:14.650278Z"
     }
    },
    "outputs": [
@@ -338,30 +337,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[ 0.732  0.538 -0.418]\n",
+      " [ 0.05   0.569  0.821]]\n",
       "(4500, 2)\n",
-      "[[ 1873.635 -2440.187  -598.683]\n",
-      " [-2440.187  3442.05   1739.997]\n",
-      " [ -598.683  1739.997  3684.315]]\n",
-      "[[ 0.422 -0.476  0.131]\n",
-      " [-0.476  0.608  0.108]\n",
-      " [ 0.131  0.108  0.97 ]]\n",
-      "[0. 0. 0.]\n",
-      "(4500, 2)\n"
+      "[[ 0.73   0.537 -0.422]\n",
+      " [ 0.056  0.569  0.82 ]]\n"
      ]
     }
    ],
    "source": [
-    "learning_rate = 0.000008; beta1=0.9; beta2=0.999; adam_e = 1e-8 \n",
+    "learning_rate = 0.008; beta1=0.9; beta2=0.999; adam_e = 1e-8 \n",
     "\n",
     "l1 = PCA_layer(2,3)\n",
+    "print(l1.w)\n",
     "\n",
     "layer1,layer1_var = l1.feed_linear(X)\n",
     "\n",
     "print(l1.back_linear().shape)\n",
-    "print(layer1_var)\n",
-    "print(l1.w.T@l1.w)\n",
-    "print(l1.vc)\n",
-    "print(X.shape)"
+    "print(l1.w)\n",
+    "\n"
    ]
   },
   {
