Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -309,7 +309,10 @@
     "        self.w    = self.sym_decorrelation(self.w - adam_midw)\n",
     "        return grad_pass\n",
     "        \n",
-    "    def feed_non(self,input)\n",
+    "    def feed_non(self,input_value):\n",
+    "        pass\n",
+    "    def back_non(self,gradient):\n",
+    "        pass\n",
     "    \n",
     "    def stand(self,a): return (a-a.mean())/a.std()\n",
     "    def norm(self,w):  return w/(np.sqrt(np.sum(w**2)))\n",
