Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -272,9 +272,8 @@
      "start_time": "2019-04-11T00:37:47.144710Z"
     },
     "code_folding": [
-     15,
      20,
-     33
+     38
     ]
    },
    "outputs": [],
@@ -310,6 +309,9 @@
     "        return grad_pass\n",
     "        \n",
     "    def feed_non(self,input_value):\n",
+    "        self.input = input_value\n",
+    "        self.layer = self.input @ self.w\n",
+    "        self.layerA= self.a * self.act(self.layer)\n",
     "        pass\n",
     "    def back_non(self,gradient):\n",
     "        pass\n",
