--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -265,11 +265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:37:47.156652Z",
-     "start_time": "2019-04-11T00:37:47.144710Z"
+     "end_time": "2019-04-11T00:41:36.225746Z",
+     "start_time": "2019-04-11T00:41:36.211859Z"
     },
     "code_folding": [
      20,
@@ -311,7 +311,9 @@
     "    def feed_non(self,input_value):\n",
     "        self.input = input_value\n",
     "        self.layer = self.input @ self.w\n",
-    "        self.layerA= self.a * self.act(self.layer)\n",
+    "        self.layerA= self.a * self.act(self.b * self.layer) + self.c\n",
+    "        var = self.w.T @ self.input.T @ self.input @ self.w\n",
+    "        return self.layerA\n",
     "        pass\n",
     "    def back_non(self,gradient):\n",
     "        pass\n",
