Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -265,11 +265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 76,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:41:52.666570Z",
-     "start_time": "2019-04-11T00:41:52.652706Z"
+     "end_time": "2019-04-11T00:45:16.682966Z",
+     "start_time": "2019-04-11T00:45:16.665059Z"
     },
     "code_folding": [
      20,
@@ -316,6 +316,11 @@
     "        return self.layerA,var\n",
     "    \n",
     "    def back_non(self,gradient):\n",
+    "        \n",
+    "        grada = gradient * self.act(self.b * self.layer)\n",
+    "        gradb = gradient * self.a * self.d_act(self.b * self.layer) * self.layer\n",
+    "        gradc = gradient\n",
+    "        grad\n",
     "        pass\n",
     "    \n",
     "    def stand(self,a): return (a-a.mean())/a.std()\n",
