Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -320,7 +320,7 @@
     "        grada = gradient * self.act(self.b * self.layer)\n",
     "        gradb = gradient * self.a * self.d_act(self.b * self.layer) * self.layer\n",
     "        gradc = gradient\n",
-    "        grad\n",
+    "        gradw = \n",
     "        pass\n",
     "    \n",
     "    def stand(self,a): return (a-a.mean())/a.std()\n",
