Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -265,11 +265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:46:15.902153Z",
-     "start_time": "2019-04-11T00:46:15.886255Z"
+     "end_time": "2019-04-11T00:46:50.105681Z",
+     "start_time": "2019-04-11T00:46:50.086374Z"
     },
     "code_folding": [
      47
@@ -321,6 +321,13 @@
     "        gradc = gradient\n",
     "        gradw = self.input.T @(gradient * self.a * self.d_act(self.b * self.layer) * self.b) -  2 * self.input.T @ self.input @ self.w \n",
     "        grad_pass = (gradient * self.a * self.d_act(self.b * self.layer) * self.b)  @ self.w.T -2 * self.input   @ self.w     @ self.w.T\n",
+    "        \n",
+    "        print(grada.shape)\n",
+    "        print(gradb.shape)\n",
+    "        print(gradc.shape)\n",
+    "        print(gradw.shape)\n",
+    "        print(grad_pass.shape)\n",
+    "\n",
     "        pass\n",
     "    \n",
     "    def stand(self,a): return (a-a.mean())/a.std()\n",
@@ -370,6 +377,7 @@
     "layer1,layer1_var = l1.feed_non(X)\n",
     "layer2,layer2_var = l2.feed_linear(layer1)\n",
     "\n",
+    "grad2 = l2.ba\n",
     "print(layer1_var.mean() + layer2_var.mean() )\n",
     "\n",
     "# print(l1.back_linear().shape)\n",
