Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -265,11 +265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 91,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:46:50.105681Z",
-     "start_time": "2019-04-11T00:46:50.086374Z"
+     "end_time": "2019-04-11T00:48:58.343921Z",
+     "start_time": "2019-04-11T00:48:58.317143Z"
     },
     "code_folding": [
      47
@@ -316,9 +316,9 @@
     "    \n",
     "    def back_non(self,gradient):\n",
     "        \n",
-    "        grada = gradient * self.act(self.b * self.layer)\n",
-    "        gradb = gradient * self.a * self.d_act(self.b * self.layer) * self.layer\n",
-    "        gradc = gradient\n",
+    "        grada = (gradient * self.act(self.b * self.layer)).mean(0)\n",
+    "        gradb = (gradient * self.a * self.d_act(self.b * self.layer) * self.layer).mean(0)\n",
+    "        gradc = gradient.mean(0)\n",
     "        gradw = self.input.T @(gradient * self.a * self.d_act(self.b * self.layer) * self.b) -  2 * self.input.T @ self.input @ self.w \n",
     "        grad_pass = (gradient * self.a * self.d_act(self.b * self.layer) * self.b)  @ self.w.T -2 * self.input   @ self.w     @ self.w.T\n",
     "        \n",
@@ -344,11 +344,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 92,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:42:52.011393Z",
-     "start_time": "2019-04-11T00:42:52.002960Z"
+     "end_time": "2019-04-11T00:48:58.566924Z",
+     "start_time": "2019-04-11T00:48:58.556518Z"
     }
    },
    "outputs": [
@@ -356,12 +356,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.641 -0.384 -0.664]\n",
-      " [ 0.174 -0.77   0.614]]\n",
-      "[[-0.064  0.315 -0.947]\n",
-      " [-0.327 -0.903 -0.278]\n",
-      " [-0.943  0.292  0.161]]\n",
-      "322.07318624527176\n"
+      "[[-0.449  0.177  0.876]\n",
+      " [-0.348 -0.937  0.011]]\n",
+      "[[ 0.183 -0.692  0.699]\n",
+      " [ 0.373  0.706  0.602]\n",
+      " [-0.909  0.151  0.388]]\n",
+      "1482.4958243837748\n",
+      "(3,)\n",
+      "(3,)\n",
+      "(3,)\n",
+      "(2, 3)\n",
+      "(4500, 2)\n"
      ]
     }
    ],
@@ -376,9 +381,11 @@
     "\n",
     "layer1,layer1_var = l1.feed_non(X)\n",
     "layer2,layer2_var = l2.feed_linear(layer1)\n",
-    "\n",
-    "grad2 = l2.ba\n",
     "print(layer1_var.mean() + layer2_var.mean() )\n",
+    "\n",
+    "grad2 = l2.back_linear()\n",
+    "l1.back_non(grad2)\n",
+    "# print(grad2.shape)\n",
     "\n",
     "# print(l1.back_linear().shape)\n",
     "# print(l1.w)\n",
