Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -335,6 +335,11 @@
     "        adam_midb = (self.mb / (1-beta1)) * learning_rate/(np.sqrt(self.vb/(1-beta2)) + adam_e)\n",
     "        self.b    = self.stand(self.b - adam_midb)        \n",
     "\n",
+    "        self.mc   = beta1 * self.mb + (1-beta1) * grada\n",
+    "        self.vc   = beta2 * self.vb + (1-beta2) * grada ** 2\n",
+    "        adam_midc = (self.mb / (1-beta1)) * learning_rate/(np.sqrt(self.vb/(1-beta2)) + adam_e)\n",
+    "        self.c    = self.stand(self.b - adam_midb)   \n",
+    "        \n",
     "        self.mw   = beta1 * self.mw + (1-beta1) * gradw\n",
     "        self.vw   = beta2 * self.vw + (1-beta2) * gradw ** 2\n",
     "        adam_midw = (self.mw / (1-beta1)) * learning_rate/(np.sqrt(self.vw/(1-beta2)) + adam_e)\n",
