Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -361,11 +361,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 108,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-11T00:53:54.124619Z",
-     "start_time": "2019-04-11T00:53:54.113693Z"
+     "end_time": "2019-04-11T00:55:19.298109Z",
+     "start_time": "2019-04-11T00:55:18.965291Z"
     }
    },
    "outputs": [
@@ -373,12 +373,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.816  0.046 -0.576]\n",
-      " [ 0.243  0.877  0.414]]\n",
-      "[[-0.377 -0.754  0.538]\n",
-      " [-0.366  0.655  0.661]\n",
-      " [-0.851  0.053 -0.523]]\n",
-      "1468.1114179956458\n"
+      "2089.2311491099317\n",
+      "7975.625046941685\n",
+      "8147.541808056298\n",
+      "8376.4029692085\n",
+      "8643.084162551015\n",
+      "8936.751173051722\n",
+      "9249.925598792752\n",
+      "9576.922808607842\n",
+      "9913.193413013945\n",
+      "10254.996605985487\n",
+      "10599.217001222956\n",
+      "10943.250011261414\n",
+      "11284.922425174751\n",
+      "11622.43229459982\n",
+      "11954.300215715299\n",
+      "12279.327948799499\n",
+      "12596.562244048164\n",
+      "12905.262720825613\n",
+      "13204.873146854261\n",
+      "13494.995717008898\n",
+      "13775.36805513829\n",
+      "14045.842720450742\n",
+      "14306.369027785742\n",
+      "14556.977000418472\n",
+      "14797.763280429479\n",
+      "15028.878825177728\n",
+      "15250.518223294095\n",
+      "15462.910469353712\n",
+      "15666.311043812624\n",
+      "15860.995154803873\n",
+      "16047.25200685441\n",
+      "16225.37997380305\n",
+      "16395.682561338963\n",
+      "16558.465058759906\n",
+      "16714.031786085852\n",
+      "16862.683855816358\n",
+      "17004.717375216744\n",
+      "17140.422025258733\n",
+      "17270.079959597362\n",
+      "17393.964974231356\n",
+      "17512.341903996676\n",
+      "17625.46621002528\n",
+      "17733.583724756652\n",
+      "17836.930527021184\n",
+      "17935.732924591946\n",
+      "18030.207522044562\n",
+      "18120.561358762232\n",
+      "18206.992100916505\n",
+      "18289.688276061173\n",
+      "18368.829540182687\n",
+      "18444.586967292133\n",
+      "18517.12335634034\n",
+      "18586.59354775033\n",
+      "18653.14474613718\n",
+      "18716.916843951793\n",
+      "18778.042743958507\n",
+      "18836.64867747658\n",
+      "18892.854516276053\n",
+      "18946.774076870617\n",
+      "18998.515415724025\n",
+      "19048.18111517174\n",
+      "19095.86855820372\n",
+      "19141.670193223028\n",
+      "19185.6737871488\n",
+      "19227.962668154076\n",
+      "19268.615957018043\n",
+      "19307.708787623917\n",
+      "19345.312516923743\n",
+      "19381.49492465142\n",
+      "19416.320402885598\n",
+      "19449.850135557037\n",
+      "19482.142269280896\n",
+      "19513.25207472967\n",
+      "19543.232099487977\n",
+      "19572.13231283117\n",
+      "19600.00024233358\n",
+      "19626.88110388049\n",
+      "19652.817923195824\n",
+      "19677.851652105797\n",
+      "19702.0212774498\n",
+      "19725.36392441133\n",
+      "19747.91495391651\n",
+      "19769.708054758266\n",
+      "19790.775330612672\n",
+      "19811.14738224252\n",
+      "19830.85338490494\n",
+      "19849.921161950602\n",
+      "19868.377253697552\n",
+      "19886.24698315053\n",
+      "19903.55451785005\n",
+      "19920.32292805343\n",
+      "19936.574242091596\n",
+      "19952.329498580337\n",
+      "19967.608795845495\n",
+      "19982.431338261384\n",
+      "19996.81548084424\n",
+      "20010.77877063207\n",
+      "20024.33798645177\n",
+      "20037.50917603112\n",
+      "20050.30769164034\n"
      ]
     }
    ],
@@ -389,17 +483,17 @@
     "l2 = PCA_layer(3,3)\n",
     "l3 = PCA_layer(3,2)\n",
     "\n",
-    "for _ in range(100)\n",
+    "for _ in range(100):\n",
     "\n",
     "    layer1,layer1_var = l1.feed_non(X)\n",
     "    layer2,layer2_var = l2.feed_non(layer1)\n",
-    "    layer3,layer3_var = l2.feed_linear(layer2)\n",
+    "    layer3,layer3_var = l3.feed_linear(layer2)\n",
     "\n",
-    "    \n",
-    "print(layer1_var.mean() + layer2_var.mean() )\n",
+    "    print(layer1_var.mean() + layer2_var.mean() + layer3_var.mean() )\n",
     "\n",
-    "grad2 = l2.back_linear()\n",
-    "grad1 = l1.back_non(grad2)\n",
+    "    grad3 = l3.back_linear()\n",
+    "    grad2 = l2.back_non(grad3)\n",
+    "    grad1 = l1.back_non(grad2)\n",
     "# print(grad2.shape)\n",
     "\n",
     "# print(l1.back_linear().shape)\n",
