--- a/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.2.. make moon regression.ipynb
@@ -481,7 +481,7 @@
     "\n",
     "l1 = PCA_layer(2,3)\n",
     "l2 = PCA_layer(3,3)\n",
-    "l3 = PCA_layer(3,2)\n",
+    "l3 = PCA_layer(3,1)\n",
     "\n",
     "for _ in range(100):\n",
     "\n",
@@ -506,7 +506,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(8,6))\n",
+    "plt.scatter(fdsafds[y==0], np.zeros((len(one)//2)),  color='red', alpha=0.05)\n",
+    "plt.scatter(fdsafds[y==1], np.zeros((len(one)//2)), color='blue', alpha=0.05)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
